# codex-router

./: .gitignore  README.md  SECURITY.md  index.html  package-lock.json  package.json  setup.py
.github/workflows/: compatibility.yml
compatibility/: README.md  registry.json
compatibility/verification/: real-v1.json
docs/superpowers/plans/: 2026-07-21-codex-router-core.md  2026-07-21-codex-router-mvp.md  2026-07-21-real-codex-session-security.md  2026-07-22-codex-router-readiness.md
docs/superpowers/specs/: 2026-07-21-codex-oauth-router-design.md  2026-07-21-codex-router-core-design.md  2026-07-21-codex-router-dashboard-ui-design.md  2026-07-21-codex-router-responses-usage-design.md  2026-07-21-codex-router-secure-bootstrap-queue-fallback.md  2026-07-21-real-codex-session-security-design.md  (+1 more)
python_backup/: LICENSE  pyproject.toml
python_backup/codex_router/: auth.py  config.py  gateway.py  redaction.py  server.py
python_backup/compatibility/: README.md
python_backup/tests/: __init__.py  test_auth.py  test_cli_integration.py  test_config.py  test_permissions.py  test_storage.py
python_backup/tests/fixtures/auth/: missing-token.json
src/: App.tsx  api.ts  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/proxy/: converter.rs  handlers.rs  mod.rs
src/codex_router/: __init__.py  __main__.py  account_status.py  app_server.py  auth.py  compatibility.py  config.py  dashboard.py  gateway.py  model_catalog.py  readiness.py  server.py  storage.py  usage.py
src/pages/: Dashboard.tsx  Logs.tsx  ModelMapping.tsx  Providers.tsx  Settings.tsx
tests/: test_app_server.py  test_auth.py  test_cli_integration.py  test_compatibility.py  test_config.py  test_dashboard.py  test_gateway.py  test_model_catalog.py  test_permissions.py  test_public_safety.py  test_readiness.py  test_server.py  test_smoke.py  test_usage.py
(+3 files in other folders)
